# lsgeolib

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst
examples/: data_1.yml  data_2.yml
src/lsgeolib/: __init__.py  config.py  globals.py
src/lsgeolib/element/: __init__.py  angle.py  line.py  utils.py
src/lsgeolib/measurement/: __init__.py  abc.py  angle.py  direction.py  distance.py  height_difference.py  measurement.py  orientation_direction.py  point.py  utils.py
src/lsgeolib/network/: __init__.py  abc.py  geodetic_network.py  utils.py
src/lsgeonetadj/: __init__.py  skeleton.py
src/lsgeonetadj/element/: Angle.py  Line.py  Point.py  __init__.py  angle.py  line.py  point.py  utils.py
src/lsgeonetadj/model/: functional.py
src/lsgeonetadj/network/: geodetic_network.py  mixed_2d_network.py
test_notebooks/: Untitled.ipynb
testing/: test.py
tests/: bla.py  conftest.py  test_elements.py  test_skeleton.py
tests/data/: data_1.yml  data_2.yml
