[metadata]
name = lsgeolib
description = Library for defining Geodetic Networks and performing least square adjustments.
author = jankovic_gd
author-email = jankovic.gd@gmail.com
license = mit
url = https://pyscaffold.org/
long-description = file: README.rst
platforms = any
keywords = geodesy, least squares, adjustment, network
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Education
    Intended Audience :: Developers
    Intended Audience :: Education

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
setup_requires = pyscaffold>=3.1a0,<3.2a0
install_requires = 
    pyyaml>=5.3,<6.0
    omegaconf>=2.2,<3.0
    numpy
tests_require = 
    pytest
    pytest-cov
python_requires = >=3.7.*

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
dev =
    black
    flake8
    mypy
all = 
    pytest
    pytest-cov
    black
    flake8

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = lsgeolib.module:function
# For example:
# console_scripts =
#     fibonacci = lsgeolib.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
extras = True

[tool:pytest]
addopts =
    --cov lsgeolib --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
max-line-length = 89


[pyscaffold]
version = 3.1
package = lsgeolib
